--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ Project1/Project1/x64/Debug/Project1.tlog/link.write.1.tlog
 Project1/Project1/x64/Debug/Project1.tlog/Project1.lastbuildstate
 Project1/Project1/x64/Debug/vc145.idb
 Project1/.vs/Project1.slnx/FileContentIndex/48546027-4174-4245-99b9-5e7b678ebb70.vsidx
+*.vsidx
+*.ipch
+*.db
+*.db-shm
