--- a/Project1/Project1/Project1.vcxproj
+++ b/Project1/Project1/Project1.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ArbolBinario.cpp" />
+    <ClCompile Include="avl.cpp" />
     <ClCompile Include="Estructura.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
